# starwars-insights-api

./: .env.example  .gcloudignore  LICENSE  README.md  dev.py  main.py  openapi.yaml  pyproject.toml  requirements.txt
Docs/: 404.html  consideracoes-finais.html  endpoints.html  introducao.html  playground.html  print.html  searcher-c2a407aa.js  searchindex-eacedabe.js  solucao.html  toc-5245ddeb.js
app/controllers/: auth_controller.py  insight_controller.py  nlp_controller.py
app/models/: data_service.py  database.py  entities.py  mapping.py  nlp_service.py  swapi.py
app/tests/: test_db_histories.py  test_db_sw.py  test_e2e_api.py  test_nlp.py
app/tools/: metadata_syncer.py  nlp_metadado_bootstrap.py
app/utils/: auth.py
app/views/: responses.py
book/: book.toml
book/src/: SUMMARY.md  arquitetura.md  consideracoes-finais.md  endpoints.md  introducao.md  playground.md  solucao.md
book/src/html_extras/: arch.html  playground.html
docs/: 404.html  arquitetura.html  consideracoes-finais.html  endpoints.html  index.html  introducao.html  playground.html  print.html  searcher-c2a407aa.js  searchindex-318760f2.js  searchindex-55dd08c3.js  searchindex-e8e4e955.js  solucao.html  toc.html
docs/html_extras/: arch.html  playground.html
src/infrastructurer/: swapi_client.py
src/interfaces/: handlers.py
tests/: test_e2e_api.py
