[project]
name = "starwars-insights-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "functions-framework>=3.10.0",
    "google-auth>=2.48.0",
    "google-cloud-firestore>=2.23.0",
    "google-cloud-storage>=3.8.0",
    "httpx>=0.28.1",
    "nltk>=3.9.2",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = []

[tool.black]
line-length = 88
target-version = ["py311"]
skip-string-normalization = false

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = ["E501"] 